# ParkingCECAR_API_v1

./: .gitignore  Pipfile  Readme.md  db.sqlite3  pyproject.toml  requirements.txt  requirements_no_hash.txt
api/: models.py  serializers.py  settings.py  urls.py  views.py
detector_utils/: FileManagerUtil.py  app.py  base64_utils.py  detector_interface.py  license_detector.py
