[tool.poetry]
name = "parking-cecar-api-v1"
version = "0.1.0"
description = ""
authors = ["altakis <42413498+altakis@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-file = "^1.5.1"
validators = "^0.22.0"
transformers = "^4.32.1"
torch = "^2.0.1"
easyocr = "^1.7.1"
opencv-python = "^4.8.0.76"
python-dotenv = "1.0.0"
djangorestframework = "3.14.0"
matplotlib = "3.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"